--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -26,9 +26,10 @@
 \author{Robert Lytle}
 \date{\today}
 \maketitle
-%\epigraph{I didn't get a thank you. That's OK. We sent him on the way, but I wasn't a fan of John McCain.}{\textit{Donald Trump}}
+\epigraph{This is not the Republicans vs the Democrats---this is the elites of the Republican and Democratic party who have driven this country into the ditch vs Donald J. Trump and the Rest of America.}{\textit{Roger Stone %(Get Me Roger Stone)
+}}
 \epigraph{Establishment power in Washington is not always centered around left versus right. Often, it’s about up versus down.}{\textit{Alexandria Ocasio-Cortez}}
-\epigraph{The beauty of the tea party movement is that it is independent and thus a true check and balance of the Republican and Democrat parties. It's not a pawn of the GOP, thus untouchable in criticism of the Democrats---I view it as an unattached conscience of the Republican party.}{\textit{Dana Loesch}}
+%\epigraph{The beauty of the tea party movement is that it is independent and thus a true check and balance of the Republican and Democrat parties. It's not a pawn of the GOP, thus untouchable in criticism of the Democrats---I view it as an unattached conscience of the Republican party.}{\textit{Dana Loesch}}
 \setstretch{2}
 %\thispagestyle{empty}
 %\clearpage
@@ -117,11 +118,11 @@ This raises troubling normative concerns regarding citizens' faith in democracy.
 \begin{wrapfigure}{R}{.7\textwidth}
 \centering
 \includegraphics[width=.7\textwidth]{cdf-ridge-all-dis.png}
-\caption{\label{fig:ridge-dis} \textit{\textbf{Ridgeline plot of mean partisan feeling thermometers by reported satisfaction in democracy.} Partisans' in-party/independents average FT. %Plots show the distributions of mean partisan feeling thermometers---$(FT_D + FT_R)/2$---of those satisfied and dissatisfied with Democracy. Unsurprisingly, those dissatisfied are more likely to have a cold average FT
+\caption{\label{fig:ridge-dis} \textit{\textbf{Ridgeline plot of mean partisan feeling thermometers by reported satisfaction in democracy.} %Partisans' in-party/independents average FT. Plots show the distributions of mean partisan feeling thermometers---$(FT_D + FT_R)/2$---of those satisfied and dissatisfied with Democracy. Unsurprisingly, those dissatisfied are more likely to have a cold average FT
 }}
 \end{wrapfigure}
 
-Figure \ref{fig:ridge-dis} shows all respondents' mean partisan feeling thermometer (the average of their Democrat and Republican thermometers), stratified by whether the respondent is satisfied or dissatisfied with Democracy. Unsurprisingly, the left-ward tails are largest among discontents, but all three groups (satisfied, dissatisfied, and those who weren't sure or declined to answer) have become increasingly likely to be, an average, cold towards the parties.
+Figure \ref{fig:ridge-dis} shows all respondents' mean partisan feeling thermometer (the average of their Democrat and Republican thermometers), stratified by whether the respondent is satisfied or dissatisfied with Democracy. Unsurprisingly, the leftward tails are largest among discontents, but all three groups (satisfied, dissatisfied, and those who weren't sure or declined to answer) have become increasingly likely to be, an average, cold towards the parties.
 
 \subsection{Primaries}
 Setting aside issues of causal identification, clearly increasing dissatisfaction with democracy does not fully explain  the increase in those who are cold toward their (or both) parties\footnote{Nor does cold partisan affect explain all increasing dissatisfaction.}. I turn now to an examination of the relationship between primary vote choice and in-party affect. I argue that the increase in cold partisan affect can be explained in part by ``sore losers" in primary elections---as primaries become more salient, so to do the factions represented by supporters of particular candidates. In short, primary elections provide another layer of group-based political identity below the party, forcing partisans to see not just the out-party as adversarial, but members of their own party as well.
