troubleshooting primary vote choice

--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -138,8 +138,15 @@ Figure \ref{fig:primary-dem} shows density plots of Democrats' in-party feeling 
 
 On the Republican side, the Trump campaign postured itself as openly hostile to the Republican party, perhaps even to a greater degree than did the Sanders campaign against the Democrats. Despite this, Trump supporters were the warmest group of Republican primary voters\footnote{[Figs will be updated to include reps]}---bad news for our \textit{a priori} disdain hypothesis---and good news for the sore loser hypothesis.
 
+\begin{figure}
+\centering
+\includegraphics[width=1\textwidth]{partisan-loess-all.png}
+\caption{\label{fig:loess} \textit{\textbf{LOESS model estimating probability of self-identifying as a strong partisan}}}
+\end{figure}
+
 \subsubsection{Panel Data}
-In this section I will use panel data to see if primary voters' party id strength decreases after their candidate loses. Any effect here should also be higher in 2008 than in 2000/2004.
+
+Based on cross-sectional data alone it is unclear whether vote choice or a cold affect is prior to the other. Using panel data from the 2000 and 2008 presidential elections
 
 %The main lesson of this study to scholars of political polarization should be the importance of clearly conceptualizing what is substantively important about polarization, and understanding the methodological trade-offs that occur when too much is built in to our dependent-variable models of polarization. The tacit (or explicit) assumption that in-party feelings are necessarily high when out-party feelings are low should be put to rest.
 
