re-writing intro

--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -43,7 +43,21 @@
 %\end{figure}
 
 \section{Introduction}
-Affective and social distance between Democrats and Republicans has expanded dramatically. Scholars of affective polarization have largely considered partisans to be warm towards their parties and co-partisans and cold to members of the out party \citep{iyengar2012affect, iyengar2018strengthening}. These scholars argue that the ``Net Partisan Affect" of Democrats and Republicans---the
+
+
+
+Clinton supporters' posture towards their party in 2016 bore little semblance to that of the '08 race. Bernie Sanders---a former independent and self-identified socialist---leaned into the role of an insurgent, anti-establishment candidate and predicating his campaign on a conflict between the working-class and the elites of both major parties. Sanders supporters, angry with the DNC and reluctant to support Clinton in November led a losely organized movement of Democratic party discontents to found groups like \textit{Justice Democrats} and expand membership of organizations like the \textit{Democratic Socialists of America} and various state and local progressive caucues to protest alleged slights by the party establishment and support further left and anti-establishment downballot candidates. In the 2016 ANES time-series survey, Sanders supporters were about 20 points colder towards the Democratic party on a 100-point feeling thermometer than their Clinton supporting co-partisans.
+
+This is not particularly surprising on its own. Sanders campaigned against the party establishment---it follows that he would attract those disillusioned with the party. The story is more complicated. Republican supporters of Donald Trump---who's campaign even more explicitly, exuberantly hostile towards the Republican party---were warmer towards their party than any other candidates' supporters, despite the mutual hostility between Trump and established Republican elites.
+
+In 2008, despite her roll as Democratic standard-bearer (a role which \textit{should} have enticed more enthusiastic Democrats to her camp in the primaries) Clinton's defeat by Barack Obama in June of 2008 (much like Bernie Sanders' defeat in 2016) spawned the ``Party Unity My Ass" movement, engaging in various forms of protest against the DNC and pledging \textit{en masse} not to support the (relative) party outsider Barack Obama in the general election\footnote{\url{https://www.washingtonpost.com/wp-dyn/content/article/2008/06/26/AR2008062604162_pf.html}}. The average in-party thermometer for Clinton voters was about about 10 points lower than that of Obama supporters' in '08, or indeed \textit{Clinton} Supporters in 2016.
+
+It is likely that anti-establishment or outsider candidates should attract the support of disillusioned or alienated voters but the descriptive features of these recent cases suggest a second process whereby a candidate's victory or defeat in a primary causes an increase or decrease in their supporters' affect towards the party; explaining the tepid enthusiasm for the Democratic party amongst Hillary supporters in 2008 and the intense warmth felt by Trump supporters for their party in 2016.
+
+In the remainder of this study, I characterize long-term 
+
+
+Affective and social distance between Democrats and Republicans has expanded dramatically. Scholars of affective polarization have largely considered partisans to be warm towards their parties and co-partisans and cold to members of the out party \citep{iyengar2012affect, iyengar2018strengthening}.
 
 
 %Not super happy with "midst of disagreements"
@@ -150,7 +164,7 @@ Based on cross-sectional data alone it is unclear whether vote choice or a cold 
 
 %The main lesson of this study to scholars of political polarization should be the importance of clearly conceptualizing what is substantively important about polarization, and understanding the methodological trade-offs that occur when too much is built in to our dependent-variable models of polarization. The tacit (or explicit) assumption that in-party feelings are necessarily high when out-party feelings are low should be put to rest.
 
-%Given that partisans feelings towards their own party are not necessarily predictive of their feeling toward the opposing party, political scientists should carefully consider what substantive questions they are interested in asking when justifying a choice of dependent variable, recognizing that choice can limit the number of questions which can be asked, and obscure potential insights.
+%Given that partisans feelings towards their own party are not necessarily predictive of their feeling toward the opposing party, political scientists hould carefully consider what substantive questions they are interested in asking when justifying a choice of dependent variable, recognizing that choice can limit the number of questions which can be asked, and obscure potential insights.
 
 %If scholars' interest in affective polarization is truly in the distance between partisans' assessments of themselves and their opponents, a measure like net partisan affective is appropriate. If, however, the researcher's interest is in the absolute political hostility or animus \textit{implied} by that distance, they should simply use partisan's direct feelings towards their enemies. There is no reason for those in the latter camp to run the risk of overcomplicating an analysis or confounding an interesting result by including in their measure a variable unrelated to their interests.
 %\subsection{Research Design Concerns and Limitations}
