split intra-party into a note and full-length paper (plus did too much coding)

--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -42,6 +42,12 @@
 %\caption{\label{fig:cdf-npa} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.} Republicans tend to be colder in general.}}
 %\end{figure}
 
+In the last decade, factions like the Tea Party and alt-right in the Republican Party and Progressives and Democratic Socialists in the Democratic party have presented challenges to their party's status-quo. While factions like the ``Blue Dog Democrats" or ``Main Street Republicans" are nothing new and have long communicated a brand \textit{separate} from their party \citep{clarke2017party}, the brand being communicated has not necessarily been hostile to mainline party elites. The same cannot be said for more recently appearing caucuses like the Democratic Socialists or the Tea Party. Candidates from these factions often explicitly position themselves as adversarial to established, mainstream members of their party, challenging ``establishment" representatives in primary battles and expressing dissatisfaction with or open hostility towards party leaders.
+
+There is evidence that the divisions between elite co-partisans are meaningful at the mass level as well. Using the case 2016 Democratic primary \cite{wronski2018tale} demonstrate that Democrats in 2016 primary were divided along authoritarian lines. Primary voters scoring high in authoritarian personality traits were more likely to support Hillary Clinton---those with few authoritarian tendencies were likely to be supporters of Bernie Sanders. [add more]
+
+Across this backdrop of apparent intra-party division partisans' as identified by \cite{klar2018affective}, since 2004 not only has warmth towards the out-party declined but---particularly for Republicans---in party warmth as well. As in-party affect declines, so too has the role of positive partisanship (attachment to ones own party) been supplanted by hostility towards the out-party as a predictor of voting behavior\cite{iyengar2018strengthening}. With this research note, I describe in detail how the distribution of mass-level partisan affect has shifted to provide context for the above findings. I close by discussing the implications of this shift and suggest avenues for future research.
+
 \section{Introduction}
 
 
