--- a/doc/references.bib
+++ b/doc/references.bib
@@ -9,6 +9,14 @@
   publisher={Oxford University Press US}
 }
 
+@article{clarke2017party,
+  title={Party Sub-Brands and American Party Factions},
+  author={Clarke, Andrew J},
+  journal={American Journal of Political Science},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
 @misc{anescdf,
   title={The 1948--2016 ANES Cumulative Data File},
   author={American National Election Studies},
